src/theme/components/dialog.scss
.custom-dialog {
    color: $white;
    position: fixed;
    bottom: 0;
    max-height: 520px;
    flex-direction: column;
    justify-content: flex-start;
    z-index: 10;
    overflow: hidden;
    background-position: 100%;
    background-size: contain;
    height: 0;
    background: $black;
    visibility: hidden;
    opacity: 0;
    transition: height 0.3s ease;
    box-shadow: 0 1.5rem 4rem rgba(23, 24, 24, 0.15);

    &__close {
        float: right;
        text-align: right;
        z-index: 1;
        color: $black;

        &__icon-container {
            background: transparent;
            opacity: 1;
            display: inline-block;
            color: $gray;
            border-radius: 3.5rem;
            width: 50px;
            margin: 1rem;
            cursor: pointer;
            &:hover {
                color: $gray;
                background: $gray;
            }
            .close {
                vertical-align: middle;
            }
        }
    }

    &__container {
        background: linear-gradient(90deg, #000 50%, transparent);
        padding-top: 3rem;
        height: 100%;

        @media only screen and (max-width: 74em) {
            background: linear-gradient(
                90deg,
                #000 40%,
                rgba(0, 0, 0, 0.733),
                transparent
            );
            width: 88%;
        }

        @media only screen and (max-width: 61.25em) {
            background: linear-gradient(
                90deg,
                rgba(0, 0, 0, 0.966) 30%,
                transparent
            );
            width: 100%;
        }

        @media only screen and (max-width: 37.5em) {
            padding-top: 1rem;
            padding-left: 1rem;
        }
    }

    &__title {
        font-size: 4rem;
        line-height: normal;
        word-wrap: break-word;
        padding: 2rem 2rem 0 0;
        width: 92vw;
    }

    &__meta {
        &__year {
            font-size: 1.6rem;
            padding: 0 8px;
        }

        &__rating {
            font-size: 1.6rem;
            padding: 0 8px;
            color: $green;
        }
    }

    &__genres {
        font-size: 1.6rem;
        padding: 0 8px;
        white-space: normal;
    }

    &__tabs {
        bottom: 0;
        width: 100%;
        position: absolute;
        -ms-flex-item-align: center;
        height: 4rem;
        z-index: 1;
        font-size: 1.6rem;
        margin: 0 auto;
        display: flex;
        justify-content: center;

        span {
            font-size: 1.8rem;
            margin: 0 1rem;
            cursor: pointer;
            color: $gray;

            &:hover {
                color: $white;
            }

            &.active {
                border-bottom: 5px solid $green;
                color: $white;
            }
        }
    }

    &__overview {
        font-size: 1.6rem;
        padding: 0 8px;
        width: 50vw;
        display: block;
        overflow: scroll;
        height: 15vh;

        @media (max-width: 600px) {
            width: 85vw;
        }
    }

    &__overview-tab,
    &__trailer-tab,
    &__reviews-tab,
    &__similar-tab {
        display: none;
        opacity: 0;
    }

    &__overview-tab.active,
    &__trailer-tab.active,
    &__reviews-tab.active,
    &__similar-tab.active {
        display: block;
        opacity: 1;
    }
}

.is-open {
    height: 450px;
    visibility: visible;
    opacity: 1;
}

.mdl-dialog {
    width: 100%;
}

.modal-overlay {
    width: 100%;
    height: 100%;
    position: fixed;
    z-index: 5;
    left: 0;
    top: 0;
    background-color: rgba(17, 17, 17, 0.7);
    transition: all 0.5s;
}

#ytContainer,
#similarMovies,
#reviewsMovies {
    display: flex;
    text-decoration: none;
    list-style: none;
    flex-wrap: wrap;
    width: 100%;
    padding-left: 0;

    li {
        margin: 1rem;
        cursor: pointer;
        transition: all 0.2s ease;
        -webkit-font-smoothing: antialiased;
        background-size: cover;
        background: $blackReviewCover;
    }
}

#similarMovies {
    li {
        margin: 1rem;
        cursor: pointer;
        transition: all 0.2s ease;
        -webkit-font-smoothing: antialiased;
        background-size: cover;
        transition: all 0.2s ease;

        &:hover {
            transform: scale(1.1);
        }
    }
}

.similar {
    &__movie {
        height: 300px;
        // width: 44%;
        margin: 1rem;
        width: 300px;

        @media only screen and (max-width: 37.5rem) {
            width: 35%;
        }
        // @media (min-width: 77rem) {
        //     width: 34%;
        // }
    }

    &__movie--container {
        display: flex;
        flex-direction: column;
        align-content: flex-start;
        word-break: break-word;
        overflow: scroll;
        cursor: pointer;
        padding: 0.5rem;
        background: $blackCover;
    }

    &__title--vote {
        color: $green;
    }
}

.review {
    &__container {
        height: 300px;
        margin: 1rem;
        overflow: scroll;
        width: 45%;
    }

    &__author {
        font-size: 1.6rem;
        color: $white;
        display: block;
        padding: 1.5rem;
    }

    &__content {
        font-size: 1.4rem;
        padding: 1.5rem;
        display: block;
        color: $gray;
    }
}

.video-container {
    height: 30vh;
    width: 100%;
    overflow: hidden;
    @media only screen and (max-width: 40em) {
        height: 30vh;
    }
}

.video-container iframe,
.video-container object,
.video-container embed {
    width: 95vw;
    height: 100%;
}

#single-content {
    width: 80%;
}

